--- a/src/soft/java/interfaces/ConsultDebt.form
+++ b/src/soft/java/interfaces/ConsultDebt.form
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+  <NonVisualComponents>
+    <Component class="javax.swing.ButtonGroup" name="buttonGroupSearch">
+    </Component>
+  </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
@@ -197,16 +201,16 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JTable" name="table_tarifa">
+            <Component class="javax.swing.JTable" name="table_deuda">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Roboto" size="14" style="0"/>
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="2" rowCount="2">
-                    <Column editable="true" title="Title 1" type="java.lang.Object"/>
-                    <Column editable="true" title="Title 2" type="java.lang.Object"/>
-                  </Table>
+                  <Table columnCount="0" rowCount="0"/>
+                </Property>
+                <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
+                  <TableColumnModel selectionModel="0"/>
                 </Property>
                 <Property name="gridColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
@@ -262,11 +266,11 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
-                      <Component id="rbt_placa" min="-2" max="-2" attributes="0"/>
+                      <Component id="rbt_nameCliente" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="81" max="-2" attributes="0"/>
-                      <Component id="rbt_vehiculo" min="-2" max="-2" attributes="0"/>
+                      <Component id="rbt_estadoCliente" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="62" max="-2" attributes="0"/>
-                      <Component id="rbt_fecha" min="-2" max="-2" attributes="0"/>
+                      <Component id="rbt_nameDifunto" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="125" max="-2" attributes="0"/>
                       <Component id="btn_search" min="-2" pref="106" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -280,9 +284,9 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="rbt_placa" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="rbt_vehiculo" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="rbt_fecha" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="rbt_nameCliente" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="rbt_estadoCliente" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="rbt_nameDifunto" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btn_search" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="txt_buscar" alignment="3" min="-2" pref="38" max="-2" attributes="0"/>
                       </Group>
@@ -292,7 +296,7 @@
             </DimensionLayout>
           </Layout>
           <SubComponents>
-            <Component class="javax.swing.JRadioButton" name="rbt_placa">
+            <Component class="javax.swing.JRadioButton" name="rbt_nameCliente">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Roboto" size="18" style="0"/>
@@ -300,7 +304,7 @@
                 <Property name="text" type="java.lang.String" value="Nombre cliente"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JRadioButton" name="rbt_vehiculo">
+            <Component class="javax.swing.JRadioButton" name="rbt_estadoCliente">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Roboto" size="18" style="0"/>
@@ -308,10 +312,10 @@
                 <Property name="text" type="java.lang.String" value="Estado cliente"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rbt_vehiculoActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rbt_estadoClienteActionPerformed"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JRadioButton" name="rbt_fecha">
+            <Component class="javax.swing.JRadioButton" name="rbt_nameDifunto">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Roboto" size="18" style="0"/>
