--- a/src/soft/java/interfaces/MainMenu.form
+++ b/src/soft/java/interfaces/MainMenu.form
@@ -484,6 +484,10 @@
                   <Color id="Cursor de Mano"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="mouseMoved" listener="java.awt.event.MouseMotionListener" parameters="java.awt.event.MouseEvent" handler="jPanel10MouseMoved"/>
+                <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jPanel10MouseExited"/>
+              </Events>
 
               <Layout>
                 <DimensionLayout dim="0">
