--- a/src/soft/java/interfaces/ProductInventory.form
+++ b/src/soft/java/interfaces/ProductInventory.form
@@ -303,6 +303,9 @@
                   <Font name="Roboto" size="18" style="0"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txt_buscarActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
